# whatsapp-sender-fastapi

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  create_structure.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: campaigns.py  events.py  templates. py  templates.py  webhooks.py
app/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  redis.py
app/models/: __init__.py  base.py  campaign.py  message.py
app/repositories/: __init__.py  base.py  campaign_repository.py  message_repository.py
app/schemas/: __init__.py  base.py  campaign.py  csv_schema.py  message.py  template.py
app/services/: __init__.py  campaign_service.py  csv_service.py  notification_service.py  template_service.py  whatsapp_service.py
app/utils/: enums.py
app/workers/handlers/: message_handler.py
app/workers/tasks/: campaign_tasks.py  message_tasks.py
migrations/: env.py  script.py.mako
migrations/versions/: ecb2474f3fc4_initial_migration_create_campaigns_and_.py
scripts/: start_worker.sh
